Update lodging text

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <p class="c0"><span class="c2">I have reserved a block of rooms at the Hilton Garden Inn. We will be having
             breakfast there on Sunday, it has a pool, and it is a good location for our activities. The block opens up
             to the public at the end of September. The Residence Inn is also a good location and is walking distance
-            from Top Golf. However, I did not reserve a block of rooms.</span></p>
+            from Top Golf. However, I did not reserve a block of rooms. Our home is just a few blocks from both hotels.</span></p>
     <p class="c0 c1"><span class="c2"></span></p>
     <p class="c0"><span class="c6 c5">Hilton Garden Inn</span></p>
     <p class="c0"><span class="c2">400 Sherburn Ln, Louisville, KY 40207</span></p>
