Fix breakfast hours

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <p class="c0 c1"><span class="c2"></span></p>
     <p class="c0"><span class="c3">SUNDAY, OCTOBER 15</span></p>
     <p class="c0 c1"><span class="c3"></span></p>
-    <p class="c0"><span class="c6 c5">9 - 11 AM: Breakfast at the Hilton Garden Inn</span></p>
+    <p class="c0"><span class="c6 c5">9 - 10 AM: Breakfast at the Hilton Garden Inn (available 7 AM - 10 AM)</span></p>
     <p class="c0"><span class="c2">400 Sherburn Ln, Louisville, KY 40207</span></p>
     <ul class="c7 lst-kix_v4h2ew5zu641-0 start">
         <li class="c0 c8 li-bullet-0"><span class="c2">You can order off the menu or get the buffet for ~$20</span></li>
