--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
             are lunch options at the zoo if you would rather stay and continue your zoo adventure.</span></p>
     <p class="c0"><span class="c2">301 Oxmoor Ln, Louisville, KY 40222</span></p>
     <p class="c0 c1"><span class="c2"></span></p>
-    <p class="c0"><span class="c6 c5">2:30 PM - Top Golf</span></p>
-    <p class="c0"><span class="c2">301 Oxmoor Ln, Louisville, KY 40222</span></p>
+    <p class="c0"><span class="c6 c5"><s>2:30 PM - Top Golf</s></span></p>
+    <p class="c0"><span class="c2"><s>301 Oxmoor Ln, Louisville, KY 40222</s></span></p>
     <p class="c0 c1"><span class="c6 c5"></span></p>
     <p class="c0"><span class="c5">5 pm - Brasserie Provence</span><span class="c2">&nbsp;Dress smart casual for
             cocktails</span></p>
