Another strikethrough of TopGolf

--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@
     <p class="c0 c1"><span class="c2"></span></p>
     <p class="c0"><span class="c3">For those attending the surprise birthday</span></p>
     <p class="c0 c1"><span class="c6 c5"></span></p>
-    <p class="c0"><span class="c10 c5">**Please text me which activities you plan to attend (Zoo, Lunch, Top Golf,
+    <p class="c0"><span class="c10 c5">**Please text me which activities you plan to attend (Zoo, Lunch, <s>Top Golf</s>,
             Dinner)**</span></p>
     <p class="c0 c1"><span class="c2"></span></p>
     <p class="c0"><span class="c2">The main event is the dinner at Brasserie Provence. There are family and friends
             traveling to Louisville from out of town so we planned day activities for Dana to have as much time with
-            them as possible. Everyone is invited to all of the activities. Zoo, Top Golf, and Dinner are free. Lunch
+            them as possible. Everyone is invited to all of the activities. Zoo, <s>Top Golf</s>, and Dinner are free. Lunch
             and Breakfast are to be paid by you.</span></p>
     <p class="c0 c1"><span class="c2"></span></p>
     <p class="c0"><span class="c5 c10">If you will be bringing a gift for Dana, please bring it to dinner.</span></p>
